--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </video>
               </div>
             </div>
-            <a href="https://steamcommunity.com/profiles/76561198338721181" class="cta">Add me in steam!</a>
+            <a href="https://steamcommunity.com/profiles/76561198338721181" class="cta">Add me on steam!</a>
           </div>
           
         </div>
